2005-05-01  Bruno Haible  <bruno@clisp.org>

	Improved error message.
	* msgl-iconv.h (struct conversion_context): New type.
	(convert_string): Add context argument.
	* msgl-iconv.c (conversion_error): New function.
	(convert_string, convert_string_list, convert_msgid, convert_msgstr):
	Add context argument.
	(iconv_message_list): Construct context for them.
	* xgettext.c (convert_string): Add context argument.
	(from_current_source_encoding): Construct context for convert_string.
	Reported by Hans Ulrich Niedermann <debian@n-dimensional.de>.

2005-04-18  Bruno Haible  <bruno@clisp.org>

	* po-lex.h (po_gram_error, po_gram_error_at_line): Test for
	__APPLE_CC__ > 1. Needed because gcc-4.0 defines __APPLE_CC__ and
	implements __VA_ARGS__ correctly.
	* po-lex.c (po_gram_error, po_gram_error_at_line): Likewise.
	* read-stringtable.c (phase2_getc): Optimize UTF-8 code. Avoids
	gcc-4.0 warnings.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2005-03-08  Bruno Haible  <bruno@clisp.org>

	* gettext-po.h (LIBGETTEXTPO_VERSION): Bump version number.

2005-02-26  Bruno Haible  <bruno@clisp.org>

	* format-scheme.c (format_arg_type): Add FAT_COMPLEX. Remove
	FAT_FUNCTION.
	(make_intersected_element): Simplify also the intersection with
	FAT_COMPLEX.
	(make_union_element): Simplify also the union with FAT_COMPLEX.
	(IIC): New array.
	(nocheck_params): Remove function.
	(parse_upto): Remove handling of ~W, ~<, ~>.
	Implement non-CL handling of ~C, ~I, ~_, ~/, ~T.
	Implement handling of ~Y, ~!, ~Q, ~K.

2005-02-26  Bruno Haible  <bruno@clisp.org>

	* format-scheme.c (parse_upto): Remove support for ~!.
	Reported by Kevin Ryde <user42@zip.com.au>.

2005-02-24  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.2 released.

2005-02-12  Bruno Haible  <bruno@clisp.org>
