@@ -1,3 +1,8 @@
+2005-05-01  Bruno Haible  <bruno@clisp.org>
+
+	* xgettext-sh-4: New file.
+	* Makefile.am (TESTS): Add it.
+
 2005-03-20  Bruno Haible  <bruno@clisp.org>
 
 	* gettext-6: New file.
